# Ascon_Encryption_C_lang_Implementation

./: .output.txt  CMakeLists.txt  LICENSE  README.md  main.c
Docs/: NIST.SP.800-232.docx
include/ascon/: ascon_aead.h  ascon_common.h  ascon_hash.h  ascon_permutation.h  ascon_xof.h
src/: ascon_aead.c  ascon_hash.c  ascon_permutation.c  ascon_xof.c
tests/: kat_parser.c  kat_parser.h  test_aead128.c  test_aead128a.c  test_aead80pq.c  test_hash.c  test_hash_variants.c  test_kat_aead.c  test_kat_hash_kat.c  test_kat_xof_kat.c  test_xof.c
tests/vectors/ascon-v1.2/: README.md
tools/: docx_to_kat.py
